# Codex

./: .env.example  .gitignore  AGENTS.md  HiveBossDialog.spec  OWNER_PROFILE.example.md  README.md  pyproject.toml  reviewer_rubric.md  simple_schema.json  simple_schema_local.json
.agents/skills/analyze-task/: SKILL.md
.agents/skills/implement-minimal-change/: SKILL.md
.agents/skills/prepare-delivery/: SKILL.md
.codex/: config.toml
.github/: pull_request_template.md  review-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codex-review.yml  codex-task.yml
apps/: job_prompt.py
apps/api/: main.py
apps/desktop/: main.py  polished_main.py  refined_main.py
apps/web/: package-lock.json  package.json  tsconfig.tsbuildinfo
docs/: ai-governance.md  chatgpt-connect.md  demo-walkthrough.md  mcp-architecture.md  ops-runbook.md  personal-boss-mode.md
mcp-server/: Dockerfile  README.md  server.py
orchestrator/: __init__.py
orchestrator/hive/: __init__.py  audit.py  codex_exec_runtime.py  controller.py  gates.py  main.py  protocol.py  roles.py  sdk_runtime.py  worktrees.py
scripts/: build_desktop_exe.py  python_syntax_check.py  start_mcp_server.ps1  start_mcp_tunnel.ps1
templates/: boss-request-template.md  chatgpt-review-template.md  chatgpt-to-codex-task-template.md  request-changes-template.md  ship-readiness-template.md
tests/: conftest.py  test_api.py  test_controller.py  test_desktop_main.py  test_job_prompt.py  test_mcp_server.py  test_polished_desktop_main.py  test_polished_job_prompt.py
(+10 files in other folders)
