[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hive-codex"
version = "0.1.0"
description = "Codex CLI driven swarm delivery MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "customtkinter>=5.2.2",
  "fastapi>=0.115.0",
  "openai>=1.107.0",
  "openai-agents>=0.2.0",
  "pydantic>=2.9.0",
  "PySide6>=6.8.0",
  "python-dotenv>=1.0.1",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[project.scripts]
hive = "orchestrator.hive.main:entrypoint"
hive-dialog = "apps.desktop.polished_main:entrypoint"

[tool.setuptools.packages.find]
include = ["orchestrator*", "apps*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".next", "node_modules", "runs"]
addopts = [
  "-p",
  "no:cacheprovider",
  "--ignore=tests/test_job_prompt.py",
  "--ignore=tests/test_desktop_main.py",
]
